--- a/oem/requirements.txt
+++ b/oem/requirements.txt
@@ -1,6 +1,6 @@
 Django==1.9.3
 django-flat-theme==1.1.3
 django-material==0.6.0
-django-nested-inline==0.3.5
+django-nested-admin==2.2.1
 six==1.10.0
 wheel==0.26.0
